@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.901 2008-03-06 03:08:31 castaglia Exp $
+$Id: NEWS,v 1.902 2008-03-08 05:12:38 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -131,6 +131,8 @@ CVS
 - Added contrib/ftpmail, a Perl script which reads a TransferLog FIFO and
   sends automatic email notifications whenever uploads occur.  See
   doc/contrib/ftpmail.html for more details.
+- Bug 3050 - Support use of OpenSSL in FIPS mode.  See doc/howto/TLS.html for
+  details on how to use FIPS mode.
 
 1.3.1 - Released 5-Oct-2007
 --------------------------------
